# ArchIntelligence

./: README.md  app.py  configDatabase.json
assets/: system_info.json
chains/: system_extraction_chain.py
installer/: pyproject.toml  setup.py
model/: SystemSchema.jq  configDatabase.json  configuration.py  schema.jq
services/: data_loader.py  document_splitter.py  llm_service.py  prompt_service.py  vector_store.py
